# apps/api-worker/openapi/worker-foundation.openapi.json
@@ -481,6 +481,13 @@
                               "learnerDefinition": {
                                 "type": "string"
                               },
+                              "nextReviewAt": {
+                                "format": "date-time",
+                                "type": [
+                                  "string",
+                                  "null"
+                                ]
+                              },
                               "partOfSpeech": {
                                 "type": "string"
                               },
@@ -1366,6 +1373,13 @@
                     },
                     "nextCursor": {
                       "type": "string"
+                    },
+                    "nextReviewAt": {
+                      "format": "date-time",
+                      "type": [
+                        "string",
+                        "null"
+                      ]
                     },
                     "totalCount": {
                       "type": "integer"
@@ -2281,6 +2295,13 @@
                             "format": "uuid",
                             "type": "string"
                           },
+                          "nextReviewAt": {
+                            "format": "date-time",
+                            "type": [
+                              "string",
+                              "null"
+                            ]
+                          },
                           "partOfSpeech": {
                             "type": "string"
                           },
@@ -2413,6 +2434,13 @@
                     "meaningId": {
                       "format": "uuid",
                       "type": "string"
+                    },
+                    "nextReviewAt": {
+                      "format": "date-time",
+                      "type": [
+                        "string",
+                        "null"
+                      ]
                     },
                     "partOfSpeech": {
                       "type": "string"
